--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://192.168.0.108:5440/db_login1
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5440/db_login1
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #dev8217
@@ -9,6 +11,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 
 
-spring.flyway.url=jdbc:postgresql://192.168.0.108:5440/db_login1
+spring.flyway.url=jdbc:postgresql://localhost:5440/db_login1
 spring.flyway.user=postgres
 spring.flyway.password=postgres
+
+api.security.token.secret=${JWT_SECRET}
