test:Adding unit tests to authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,24 @@
 
-server.port=8081
+server.port=8080
+spring.profiles.active=${ACTIVE_PROFILE:test}
+api.security.token.secret=${JWT_SECRET:myjwtsecret}
 
-spring.datasource.url=jdbc:postgresql://localhost:5440/db_login1
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-#dev8217
 spring.jpa.open-in-view=false
-
+#spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
 
 
-spring.flyway.url=jdbc:postgresql://localhost:5440/db_login1
-spring.flyway.user=postgres
-spring.flyway.password=postgres
 
-api.security.token.secret=${JWT_SECRET}
+#spring.datasource.url=jdbc:postgresql://localhost:5440/db_login1
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+##dev8217
+#spring.jpa.open-in-view=false
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=none
+#
+#spring.flyway.url=jdbc:postgresql://localhost:5440/db_login1
+#spring.flyway.user=postgres
+#spring.flyway.password=postgres
+
